# LossLab

./: .gitignore  .pre-commit-config.yaml  README.md  README_REFACTOR.md  pyproject.toml
.github/workflows/: lint.yml  mypy.yml  test.yml
LossLab/: __init__.py
LossLab/cryo/: __init__.py  alignment.py  loss.py
LossLab/losses/: __init__.py  base.py  cryoLLGI.py  mse.py  realspace.py  saxs.py
LossLab/refinement/: __init__.py  checkpoint.py  config.py  engine.py  metrics.py  trajectory.py  wandb_logger.py
LossLab/utils/: __init__.py  alignment.py  decorators.py  form_factors.py  geometry.py  map_utils.py  sequence.py
docs/: 3D_VISUALIZATION.md  WANDB_SETUP.md
examples/: README.md  refinement_with_tracking.py  simple_refinement.py
losslab/: __init__.py
losslab/losses/: __init__.py  base.py  mse.py  realspace.py  settings.py
losslab/refinement/: config.py  engine.py  utils.py
losslab/utils/: __init__.py  decorators.py
saxs-loss-info/: LOSSES.md  README.md  VALIDATION.md  validate_vs_pyausaxs.py
saxs_test/: compare_formfactors_pyausaxs_vs_manual.py  compare_losslab_vs_pyausaxs_ratio.py
test/: conftest.py  test_alignment.py  test_checkpoint.py  test_geometry.py  test_metrics.py
test/unit/: test_basic.py
