[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "losslab"
version = "0.1.0"
description = "Losses and tools for coordinate refinement"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "RS-Station" }
]
keywords = ["crystallography", "refinement", "machine-learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "gemmi>=0.6.0",
    "mdtraj>=1.9.7",
    "geomloss>=0.2.6",
    "loguru>=0.7.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "biotite>=1.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

wandb = [
    "wandb>=0.22.3",
]

CI = [
    "ruff",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/rs-station/LossLab"
Repository = "https://github.com/rs-station/LossLab"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]

# --- Ruff Linting Configuration ---
[tool.ruff]
target-version = "py310"
line-length = 88

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["losslab"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
